src/objects/InvoiceScheduleTranslatedText__mdt.object
<CustomObject>
    <description>This contains the translations for each grid section needed by the the invoice schedule</description>
    <fields>
        <fullName>Additional_Business_Terms_Header__c</fullName>
        <label>Additional Business Terms Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cold_Failover_Disaster_Recovery_Use__c</fullName>
        <label>Cold Failover Disaster Recovery Use</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete_Agreement__c</fullName>
        <label>Complete Agreement</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Governing_Terms_PM__c</fullName>
        <label>Governing Terms Permissibly Modified</label>
        <length>2200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Governing_Terms_Std__c</fullName>
        <label>Governing Terms Standard</label>
        <length>2300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Invoice_Date__c</fullName>
        <description>First iteration of Invoice Date for invoice schedule</description>
        <inlineHelpText>Translation of &quot;On or Around Effective Date&quot;</inlineHelpText>
        <label>Initial Invoice Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Header__c</fullName>
        <description>holds header for invoice schedule column 4</description>
        <inlineHelpText>Translation for &quot;Invoice Amount&quot;</inlineHelpText>
        <label>Invoice Amount Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date_Header__c</fullName>
        <description>holds translation for invoice schedule column 3</description>
        <inlineHelpText>Translation of &quot;Invoice Date&quot;</inlineHelpText>
        <label>Invoice Date Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Dispute__c</fullName>
        <label>Invoice Dispute</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Header__c</fullName>
        <description>Holds column 1 of invoice schedule. Translation of &quot;Invoice&quot;</description>
        <inlineHelpText>Translation of &quot;Invoice&quot;</inlineHelpText>
        <label>Invoice Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Period_Header__c</fullName>
        <description>Holds translation for invoice schedule column 2</description>
        <inlineHelpText>Translation of &quot;Invoice Period&quot;</inlineHelpText>
        <label>Invoice Period Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_for_Biz_Ops__c</fullName>
        <label>License for Biz Ops</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MY_MX_Renewal_Opp__c</fullName>
        <label>MY MX Commitment  Renewal Opp</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MY_MX_Sales_Opp__c</fullName>
        <label>MY MX Commitment Sales Opp</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Months__c</fullName>
        <description>This holds the language translation for the word &quot;Months&quot; in the invoice schedule</description>
        <inlineHelpText>Translation for &quot;Months&quot;</inlineHelpText>
        <label>Months</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Name_Logo_Rights__c</fullName>
        <label>No Name/Logo Rights</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_PEP_Auto_Renew__c</fullName>
        <label>No PEP Auto-Renew</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Reimbursement_of_TE__c</fullName>
        <label>No Reimbursement of T&amp;E</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Right_to_Issue_Press_Release__c</fullName>
        <label>No Right to Issue Press Release</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Technical_Support_Auto_Renew__c</fullName>
        <label>No Technical Support Auto-Renew</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Payment_Terms_120_days__c</fullName>
        <label>Non-Standard Payment Terms &lt; 120 days</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_from_Receipt_of_Invoice__c</fullName>
        <label>Payment from Receipt of Invoice</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Approval_of_Travel_Expenses__c</fullName>
        <label>Pre-Approval of Travel Expenses</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Invoicing_Payment__c</fullName>
        <label>Pricing Invoicing Payment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_and_Services_Description__c</fullName>
        <label>Product and Services Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reseller__c</fullName>
        <label>Reseller</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Terms_Header__c</fullName>
        <description>Standard Terms</description>
        <label>Standard Terms Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsequent_Invoice_Date__c</fullName>
        <description>Used in Invoice Schedule visualforce page to hold static text</description>
        <inlineHelpText>Translation of the text &quot;On or around expiration of Invoice Period&quot;</inlineHelpText>
        <label>Subsequent Invoice Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Pricing_Invoicing_Payment__c</fullName>
        <label>Term Pricing Invoicing Payment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>language__c</fullName>
        <description>Used as a foreign key to determine what language values for invoice schedule needs to be returned</description>
        <inlineHelpText>Language Codes (ex: en_US, de, fr, etc)</inlineHelpText>
        <label>language</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Invoice Schedule Translated Text</label>
    <pluralLabel>Invoice Schedule Translated Texts</pluralLabel>
</CustomObject>